changed molly quote

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>William Gansa is dead serious.</h1>
+            <h1>William Gansa is dead serious about being your president.</h1>
             <br>
         </div>
     </header>
@@ -168,8 +168,8 @@
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
-                                <p> "It takes a lot of bravery to run in an election like this."
-                                <br><b>-Molly Stoneman, Government Club Vice-President</b></p>
+                                <p> "Lol Will Gansa. I support you and your #wafflefries"
+                                <br><b>-YikYak, 4:00 AM</b></p>
                             </div>
                         </div>
                     </div>
