changed molly quote

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>William Gansa is dead serious about being your president.</h1>
+            <h1>Will Gansa's dead serious about being your president.</h1>
             <br>
         </div>
     </header>
