added message under video

--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
 
 
 
+<section id="about" class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-left">
+                    <span class="text-center"><h1>More videos to come each day until the election!</h1></span>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
 
     <!-- Portfolio -->
     <section id="services" class="services bg-primary">
@@ -178,6 +190,8 @@
             </div>
             <!-- /.row -->
         </div>
+
+    
         <!-- /.container -->
         <div class="container">
             <div class="row">
@@ -223,8 +237,6 @@
         <!-- /.container -->
 
     </section>
-
-
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
