--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-left">
-                    <span class="text-center"><h1>More videos to come each day until the election!</h1></span>
+                    <span class="text-center"><h1><b>More videos to come each day until the election!</b></h1></span>
                 </div>
             </div>
             <!-- /.row -->
