Readded Molly Stoneman quote

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Will Gansa is dead serious about <br>being your next USG president.</h1>
+            <h1>Will Gansa is dead serious.</h1>
             <br>
         </div>
     </header>
@@ -193,8 +193,8 @@
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
-                                <p> "Lol Will Gansa. I support you and your #wafflefries"
-                                <br><b>-YikYak, 4:00 AM</b></p>
+                                <p> "It takes a lot of bravery to run in an election like this."
+                                <br><b>-Molly Stoneman, Government Club Vice-President</b></p>
                             </div>
                         </div>
                     </div>
