--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
 
     <section>
         <div class="youtube">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5tzCU7a3FdQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section>
+        <div class="youtube">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Vnsp6Lu6ZFY" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
@@ -149,6 +155,12 @@
     <section>
         <div class="youtube">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/4j00BcseIoI" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section>
+        <div class="youtube">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RYGO-rMzym4" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 
@@ -267,8 +279,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h1><strong>Add vongansa on Snapchat!</strong>
-                    </h1>
+                    <h1><strong>Add vongansa on Snapchat!</strong></h1>
+                    <h1><strong><a href="http://facebook.com/willofthepeopleUSG">Like us on Facebook!</a></strong></h1>
                     </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Walker Davis 2014</p>
